compiler/tests/should-pass/code-generation/functions/Arrays.via
host alice: {A}

fun main() {
    val a = Array[int]{A}(1);
    output a[0] to alice;  /* expects 0 */

    /* Passing array obj ref as in arg */
    /* Modifying in arg array */
    f0(&a);
    output a[0] to alice;  /* expects 1 */

    /* Passing array declaration as out arg */
    /* Passing out param array as arg to new fn call */
    f1(val b);
    output b[0] to alice;  /* expects 5 */

    /* Initializing out param array, then modifying array and returning */
    f2(val d);
    output d[0] to alice;  /* expects 2 */
}

fun f0(a: Array[int]) {
    a[0] = 1;
}

fun f1(b: out Array[int]{A}) {
    g(out b);
    b[0] = 5;
}

fun g(c: out Array[int]{A}) {
    out c = Array[int]{A}(1);
}

fun f2(d: out Array[int]{A}) {
    out d = Array[int]{A}(1);
    d[0] = 2;
}
